// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<styled.span>
  <Button
    active={false}
    block={false}
    className=""
    context="default"
    disabled={false}
    key=".0"
    shape="round"
    size="md"
    type="button"
  >
    <div />
  </Button>
</styled.span>
`;

exports[`When using snapshots on an anchor typed Button Should render with an element children 1`] = `
<styled.span>
  <Button
    active={false}
    block={false}
    className=""
    context="default"
    disabled={false}
    key=".0"
    shape="round"
    size="md"
    type="anchor"
  >
    <div />
  </Button>
</styled.span>
`;
